@@ -304,7 +304,7 @@ rights reserved.
 TheSchwartz is free software; you may redistribute it and/or modify it
 under the same terms as Perl itself.
 
-TheScwhartz comes with no warranty of any kind.
+TheSchwartz comes with no warranty of any kind.
 
 =cut
 
